2019-06-09  Tom Tromey  <tom@tromey.com>

	* thread.c (thread_find_command): Use compiled_regex.
	* symmisc.c (maintenance_print_objfiles)
	(maintenance_info_symtabs, maintenance_expand_symtabs)
	(maintenance_info_line_tables): Use compiled_regex.
	* source.c (search_command_helper): Use compiled_regex.
	* solib.c (solib_add, info_sharedlibrary_command): Use
	compiled_regex.
	* psymtab.c (maintenance_info_psymtabs): Use compiled_regex.
	* objc-lang.c (info_selectors_command, info_classes_command): Use
	compiled_regex.
	* mi/mi-cmd-file.c (mi_cmd_file_list_shared_libraries): Use
	compiled_regex.
	* gdb_regex.h (class compiled_regex) <exec>: New overload.
	* auto-load.c (struct collect_matching_scripts_data) <regex>: New
	member.
	(collect_matching_scripts): Update.
	(auto_load_info_scripts): Use compiled_regex.
	* ada-lang.c (is_known_support_routine): Use compiled_regex.

2019-06-09  Tom Tromey  <tom@tromey.com>

	* stack.c: Include gdb_regex.h.
	* ui-style.c: Include gdb_regex.h.
	* symtab.h: Don't include gdb_regex.h.
	(compiled_regex): Forward declare.

2019-06-10  Tom Tromey  <tromey@adacore.com>

	* ada-lang.c (_initialize_ada_language): Update help text.

2019-06-10  Tom Tromey  <tromey@adacore.com>

	* m32c-tdep.c (m32c_m16c_address_to_pointer): Don't end warning
	with a newline.
	* guile/guile.c (handle_boot_error): Don't end warning with a
	newline.
	* cli/cli-cmds.c (exit_status_set_internal_vars): Don't end
	warning with a newline.
	* s12z-tdep.c (s12z_skip_prologue): Don't end warning with a
	newline.
	(s12z_frame_cache): Likewise.
	* dwarf-index-cache.c (index_cache::store): Don't end warning with
	a newline.
	* solib-svr4.c (disable_probes_interface): Don't end warning with
	a newline.
	* nat/fork-inferior.c (fork_inferior): Don't end warning with a
	newline.
	* python/python.c (do_finish_initialization): Don't end warning
	with a newline.

2019-06-10  Tom Tromey  <tom@tromey.com>

	* python/py-breakpoint.c (gdbpy_breakpoint_created)