@@ -290,12 +290,6 @@ extern char *relocate_gdb_directory (const char *initial, int flag);
 extern int annotation_level;	/* in stack.c */
 
 
-/* From regex.c or libc.  BSD 4.4 declares this with the argument type as
-   "const char *" in unistd.h, so we can't declare the argument
-   as "char *".  */
-
-EXTERN_C char *re_comp (const char *);
-
 /* From symfile.c */
 
 extern void symbol_file_command (const char *, int);
